proofread and edits

--- a/docs/40_smartlab/41_chemotion_eln/60_chemotion_eln_analysis.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/60_chemotion_eln_analysis.mdx
@@ -7,11 +7,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Chemotion: Analysis
 
-<img alt="Chemotion ELN Logo" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align= "left" vspace="30" hspace="50"/>
+<img alt="Placeholder: Illustration of a laptop showing spectra analysis on the screen." src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align= "left" vspace="30" hspace="50"/>
 
+After the [transfer and potential conversion of analytical data](/docs/chemotion_eln_dataCollection), the next step is to analyze these raw data. In Chemotion, this can be done seamlessly using one of the integrated spectra editors. [*NMRium*](https://www.nmrium.org/) is an online tool designed for processing both one-dimensional and two-dimensional NMR spectra. In addition to processing NMR spectra, NMRium allows users to directly link chemical structures to their corresponding NMR signals, facilitating the creation of [FAIR](/docs/fair) and machine-readable, actionable analytical data.
 
-After transfer and possible conversion of analytical data, these raw data have to be analyzed. In Chemotion, this can be done seamlessly utilizing one of the embedded spectra editors. [*NMRium*](https://www.nmrium.org/) is an online software for the processing of one- and two-dimensional NMR spectra. Besides the processing of NMR spectra, chemical structures can be connected to the corresponding NMR signals directly within NMRium and thus the software allows for [FAIR](docs/fair) and machine-readable and -actionable analytic data.
+Alternatively, spectra can be analyzed with [*ChemSpectra*](https://doi.org/10.1186/s13321-020-00481-0). This software, developed within Chemotion, supports a wide range of analytical techniques including NMR, IR, MS, UV/VIS, GC, HPLC, CV, XRD, and more. Depending on the specific analytical method employed, ChemSpectra offers various processing options such as peak picking, signal integration, and multiplicity setting.
 
-Alternatively, spectra can be analyzed using [*ChemSpectra*](https://doi.org/10.1186/s13321-020-00481-0). This software developed within Chemotion enables the processing of various analytical data such as NMR, IR, MS, UV/VIS, GC, HPLC, CV, XRD, and others. Depending on the analytical method, different options for the processing are available in ChemSpectra, i.e., picking peaks, integrating signals, or setting multiplicities.
-
-After performing analyses, the processed analytical data are stored within the ELN entries together with the raw data and thus are connected directly to the experiments. As the processed data are saved in open file formats, these data are interoperable and can easily be reused.
+Once analyses are completed, the processed analytical data are stored alongside the raw data within ELN entries, establishing a direct connection to the experiments conducted. Since the processed data are saved in open file formats, they remain interoperable and can be easily reused.
