--- a/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
@@ -7,6 +7,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Chemotion: Data Publication
 
-<img alt="Chemotion ELN Logo" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align= "left" vspace="30" hspace="50"/>
-
-Chemotion offers a specific functionality that facilitates the [publication of research data](/docs/data_publishing): it supports the transfer of data from a user's ELN account to a research data repository. Currently, the ELN supports the transfer of data to the [*Chemotion Repository*](https://www.chemotion-repository.net/welcome) and to [*RADAR4Chem*](https://radar4chem.radar-service.eu/radar/en/home). With this, reasearch data including semantic metadata can be easily transferred into a repository reducing a researcher's effort and helping to fulfill the requirements of funding agencies. Additionally, Chemotion is connected to other repositories such as [*nmrXiv*](https://nmrxiv.org/), to ensure best visibility and a user-friendly search of original research data. Continuously, the NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
+<img alt="Placeholder: Illustration showing data flow from Laptop/ELN to repos" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" vspace="30" hspace="50"/>
+<br/>
+<br/>  
+Chemotion offers a specific functionality that facilitates the [publication of research data](/docs/data_publishing): it supports the transfer of data from a user's ELN account to a research data repository.  Currently, the ELN supports the transfer of data to the [*Chemotion Repository*](https://www.chemotion-repository.net/welcome) and to [*RADAR4Chem*](https://radar4chem.radar-service.eu/radar/en/home). With this, reasearch data including semantic metadata can be easily transferred into a repository reducing a researcher's effort and helping to fulfill the requirements of funding agencies. Additionally, Chemotion is connected to other repositories such as [*nmrXiv*](https://nmrxiv.org/), to ensure best visibility and a user-friendly search of original research data. Continuously, the NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
+{/* work on logo placement */}
+<img alt="Chemotion Repository Logo" src={useBaseUrl('/img/ChemotionRepo_Logo.svg')} width="200" vspace="10" hspace="50"/> 
+<img alt="RADAR4chem Logo" src={useBaseUrl('/img/radar4chem_Logo.svg')} width="200" align= "left" vspace="30" hspace="50"/>
