--- a/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Data Analysis"
+title: "Data Publication"
 slug: "/chemotion_eln_dataPublication"
 id: "chemotion_eln_dataPublication"
 ---
@@ -10,7 +10,13 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 <img alt="Placeholder: Illustration showing data flow from Laptop/ELN to repos" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" vspace="30" hspace="50"/>
 <br/>
 <br/>  
-Chemotion offers a specific functionality that facilitates the [publication of research data](/docs/data_publishing): it supports the transfer of data from a user's ELN account to a [research data repository](/docs/repositories).  Currently, the ELN supports the transfer of data to the [*Chemotion Repository*](https://www.chemotion-repository.net/welcome) and to [*RADAR4Chem*](https://radar4chem.radar-service.eu/radar/en/home). With this, reasearch data including semantic metadata can be easily transferred into a repository reducing a researcher's effort and helping to fulfill the requirements of funding agencies. Additionally, Chemotion is connected to other repositories such as [*nmrXiv*](https://nmrxiv.org/), to ensure best visibility and a user-friendly search of original research data. Continuously, the NFDI4Chem team is working on establishing connections to further repositories, in particular, the [repositories supported and recommended by NFDI4Chem](/docs/choose_repository/).
-{/* work on logo placement */}
-<img alt="Chemotion Repository Logo" src={useBaseUrl('/img/ChemotionRepo_Logo.svg')} width="200" vspace="10" hspace="50"/> 
 <img alt="RADAR4chem Logo" src={useBaseUrl('/img/radar4chem_Logo.svg')} width="200" align= "left" vspace="30" hspace="50"/>
+<img alt="Chemotion Repository Logo" src={useBaseUrl('/img/ChemotionRepo_Logo.svg')} width="200" vspace="10" hspace="50"/>
+Chemotion ELN provides a dedicated functionality that facilitates the [publication of research data](/docs/data_publishing) by enabling seamless transfer from a user's ELN account to a [research data repository](/docs/repositories). Currently, the ELN supports data transfers to the [*Chemotion Repository*](https://www.chemotion-repository.net/welcome) and [*RADAR4Chem*](https://radar4chem.radar-service.eu/radar/en/home). This feature allows researchers to easily transfer their research data, including semantic metadata, into a repository, thereby reducing their workload and helping meet the requirements set by funding agencies, while making their work available to their research community.
+  
+<img alt="nmrXiv Logo" src={useBaseUrl('/img/nmrXiv.svg')} width="200" align= "left" vspace="30" hspace="50"/>Furthermore, Chemotion ELN is connected to other repositories such as [*nmrXiv*](https://nmrxiv.org/) to ensure optimal visibility and facilitate user-friendly searches for original research data. The NFDI4Chem team is actively working on establishing connections to additional repositories, particularly those [supported and recommended by NFDI4Chem](/docs/choose_repository/). This ongoing effort aims to enhance accessibility and interoperability within the research community.
+
+{/* COMMENT (Nikki): work on logo placement */}
+
+
+
