add some ideas for images

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -14,9 +14,11 @@ To find out about choosing an ELN, head to the [Choose the right ELN
 article](docs/choose_eln) and test demo instances [here](https://demo.chemotion.scc.kit.edu/).
 :::
 
-![Placeholder for some kind of Chemotion Illustration?]
+![](/img/smartlab/chemotion_preview.jpg)
 
-<img alt="Chemotion ELN Logo" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align= "left" vspace="30" hspace="50"/>
+
+
+<img alt="Chemotion ELN Logo" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="150" align="left" vspace="50" hspace="40"/>
 
 Chemotion is the ELN reference instance in [NFDI4Chem](https://www.nfdi4chem.de/). The software is developed by several developers at different NFDI4Chem sites. The development started at the [Karlsruhe institute of Technology (KIT)](https://www.kit.edu/) as part of a DFG-funded project. The extension of the software was and is further supported by the [State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts](https://mwk.baden-wuerttemberg.de/), the Karlsruhe Institute of Technology, and the [German Research Foundation (DFG)](https://www.dfg.de/).
 
@@ -28,7 +30,7 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 ### Experiment Design
 
-<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
+<img alt="Placeholder" src={useBaseUrl('/img/smartlab/chemotion/experiment_design.png')} width="150" align="left" vspace="0" hspace="40"/>
 
 Chemotion assists in experiment design and planning research by offering embedded *structure editors*, reading and generating *chemical identifiers*, and pulling information from relevant *databases*.
 
@@ -36,7 +38,7 @@ Chemotion assists in experiment design and planning research by offering embedde
 
 ### Experiment
 
-<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
+<img alt="Placeholder" src={useBaseUrl('/img/smartlab/chemotion/experiment_chemist.png')} width="150" align="left" vspace="0" hspace="40"/>
 
 During experiments, Chemotion supports researchers with *automated calculations*, *structured documentation*, and a *concise overview* of experimental information.
 
@@ -44,7 +46,7 @@ During experiments, Chemotion supports researchers with *automated calculations*
 
 ### Data Collection
 
-<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
+<img alt="Placeholder" src={useBaseUrl('/img/smartlab/chemotion/data_collection_nmr.png')} width="200" align="left" vspace="30" hspace="50"/>
 
 For seamless workflows, *analytical devices* can be connected and directly accessed within the Chemotion ELN.
 
@@ -57,23 +59,20 @@ Besides the connection of analytical devices to the Chemotion ELN, data from the
 
 ### Analysis
 
-<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
+<img alt="Placeholder" src={useBaseUrl('/img/smartlab/chemotion/analysis_sketch.png')} width="200" align="left" vspace="0" hspace="50"/>
 
 Analyses can be performed directly in the Chemotion ELN by utilizing one of the embedded *spectra editors*.
 
 [Find out more](/docs/chemotion_eln_analysis)
-
+<br/>
 ### Data Publication
 
-<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
+<img alt="Placeholder" src={useBaseUrl('/img/smartlab/chemotion/publication.png')} width="200" align="left" vspace="0" hspace="50"/>
 
 The Chemotion ELN is connected to several *data repositories*. Incorperated publishing workflows allow for simple and fast publication of research data.
 
 [Find out more](/docs/chemotion_eln_dataPublication)
 
-<br/>
-<br/>  
-<br/>  
 
 ## LabIMotion
 
