--- a/docs/40_smartlab/41_chemotion_eln/30_chemotion_experiment.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/30_chemotion_experiment.mdx
@@ -8,7 +8,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Chemotion: Experiment
 
-<img alt="Placeholder: screenshot/abstraction on illustrated laptop screen?" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align= "left" vspace="30" hspace="50"/>
+![](/img/smartlab/chemotion/experiment_chemist.png)
 
 As relevant information on chemical compounds such as molar mass, density, and purity are stored within the ELN, Chemotion automatically calculates all relevant amounts saving a researcher's time and preventing miscalculations and typos. Furthermore, predefined text snippets and the transfer of reaction information to the description of experiments allow for a fast and facile documentation.
 
