--- a/docs/40_smartlab/41_chemotion_eln/50_chemotion_eln_dataCollection.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/50_chemotion_eln_dataCollection.mdx
@@ -7,8 +7,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Chemotion: Data Collection
 
-<img alt="Chemotion ELN Logo" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align= "left" vspace="30" hspace="50"/>
-
+![](/img/smartlab/chemotion/data_collection_nmr.png)
 
 Analytical data are typically generated and stored in a fully digital format. However, there is often a disconnect between these data, the associated analytical devices, and the laboratory notebook documenting the experiments. Chemotion ELN addresses this issue by enabling the integration of analytical devices with the ELN through [device integration](https://doi.org/10.1016/j.acax.2019.100007). This feature not only facilitates linking devices to the ELN and experiments but also allows for remote control of the devices. As a result, users can manage device operations, initiate measurements, and monitor progress directly within the ELN from any location.
 
