--- a/docs/40_smartlab/41_chemotion_eln/60_chemotion_eln_analysis.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/60_chemotion_eln_analysis.mdx
@@ -7,7 +7,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Chemotion: Analysis
 
-<img alt="Placeholder: Illustration of a laptop showing spectra analysis on the screen." src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="400" />
+![](/img/smartlab/chemotion/analysis_sketch.png)
 
 <img alt="NMRium logo" src={useBaseUrl('/img/nmrium-logo.svg')} width="200" align= "left" vspace="10" hspace="50"/>After the [transfer and potential conversion of analytical data](/docs/chemotion_eln_dataCollection), the next step is to analyze these raw data. In Chemotion, this can be done seamlessly using one of the integrated spectra editors. [*NMRium*](https://www.nmrium.org/) is an online tool designed for processing both one-dimensional and two-dimensional NMR spectra. In addition to processing NMR spectra, NMRium allows users to directly link chemical structures to their corresponding NMR signals, facilitating the creation of [FAIR](/docs/fair) and machine-readable, actionable analytical data.
 
