--- a/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
@@ -7,7 +7,9 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Chemotion: Data Publication
 
-<img alt="Placeholder: Illustration showing data flow from Laptop/ELN to repos" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" vspace="30" hspace="50"/>
+![](/img/smartlab/chemotion/publication.png)
+
+
 <br/>
 <br/>  
 <img alt="RADAR4chem Logo" src={useBaseUrl('/img/radar4chem_Logo.svg')} width="200" align= "left" vspace="30" hspace="50"/>
