outline new changes that need to be made

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -28,9 +28,16 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 ## Data Life Cycle Support
 
+
+
+{/*
+### Data Reuse
+ <img alt="PLACEHOLDER" src={useBaseUrl('')} width="150" align="left" vspace="0" hspace="40"/> What about planning in terms of importing data from repositories --> reuse [Find out more](/docs/chemotion_eln_dataReuse) 
+ */}
+
 ### Experiment Design
 
-<img alt="Placeholder" src={useBaseUrl('/img/smartlab/chemotion/experiment_design.png')} width="150" align="left" vspace="0" hspace="40"/>
+<img alt="sketch experiment design" src={useBaseUrl('/img/smartlab/chemotion/experiment_design.png')} width="150" align="left" vspace="0" hspace="40"/>
 
 Chemotion assists in experiment design and planning research by offering embedded *structure editors*, reading and generating *chemical identifiers*, and pulling information from relevant *databases*.
 
@@ -44,7 +51,7 @@ During experiments, Chemotion supports researchers with *automated calculations*
 
 [Find out more](/docs/chemotion_eln_experimemt)
 
-### Data Collection
+### Data Collection and Processing
 
 <img alt="Placeholder" src={useBaseUrl('/img/smartlab/chemotion/data_collection_nmr.png')} width="200" align="left" vspace="30" hspace="50"/>
 
@@ -54,8 +61,6 @@ Besides the connection of analytical devices to the Chemotion ELN, data from the
 
 
 [Find out more](/docs/chemotion_eln_dataCollection)
-
-{/* Comment (Nikki):What about data processing (see data lifecycle article)? */}
 
 ### Analysis
 
@@ -113,7 +118,21 @@ NFDI4Chem offers hands-on workshop and Q&A sessions for Chemotion ELN and the La
 
 ### Getting Started
 
+#### Newcomers
+- Docs
+- Videos
+- Live Demo
+- Beginner Workshop
 
+#### Establishing Chemotion ELN in your Group
+
+- sharing is caring article, use table/matrix
+- [converter profiles](https://chemotion.net/docs/services/chemconverter/profiles)
+- [Inventory](https://chemotion.net/docs/eln/ui/inventory)? rights, connecting existing database (but no good solution)
+- LabIMotion templates
+    - link other workshops
+- Internal process for data publication (https://chemotion.net/docs/repo/workflow/group_lead_review https://chemotion.net/docs/repo/workflow)
+- Establish onboarding and offboarding policies
 
 ### Sources and Further Information
 
