--- a/docs/40_smartlab/41_chemotion_eln/50_chemotion_eln_dataCollection.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/50_chemotion_eln_dataCollection.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Data Collection"
+title: "Data Collection and Processing"
 slug: "/chemotion_eln_dataCollection"
 id: "chemotion_eln_dataCollection"
 ---
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Chemotion: Data Collection
+# Chemotion: Data Collection and Processing
 
 ![](/img/smartlab/chemotion/data_collection_nmr.png)
 
