--- a/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln_experimentDesign.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln_experimentDesign.mdx
@@ -11,12 +11,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ![](/img/smartlab/chemotion/experiment_design.png)
 
-{/* COMMENT (Nikki): What about planning in terms of importing data from repositories; literature management; what about rights responsiblities */}
+{/* COMMENT (Nikki): literature management; what about rights responsiblities */}
 
 In the Chemotion ELN, various entry types can be generated for planning various experimental setups. Generally, all entry types offer the possibility to draw chemical structures directly within the ELN. This is realized by embedded structure editors: *ketcher-rails* and *Ketcher 2* are integrated as default structure editors, while *ChemDraw JS* and *Marvin JS* can be integrated when the needed licences are available.
 
 All structure editors directly convert the chemical structures into common chemical identifiers such as [*InChI*](https://www.inchi-trust.org/) and notations such as [*SMILES*](https://doi.org/10.1021%2Fci00057a005) code and automatically generate a MOL file of the chemical structure. Conversely, chemical structures can be generated in the ELN by importing the codes and files mentioned above as well as by [*CAS numbers*](https://www.cas.org/cas-data/cas-registry).
-
-{/* COMMENT (Nikki): there aren't any other identifiers or notations used, are there? If no, "such as" doesn't make much sense since it implies further options. */}
 
 The Chemotion ELN directly pulls information from and links entries to databases such as [*PubChem*](https://pubchem.ncbi.nlm.nih.gov/) and [*CAS SciFinder*](https://www.cas.org/solutions/cas-scifinder-discovery-platform/cas-scifinder). Thus, the planning of experiments is facilitated as all relevant information is automatically integrated into the ELN entries.
