add getting started points

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -119,20 +119,23 @@ NFDI4Chem offers hands-on workshop and Q&A sessions for Chemotion ELN and the La
 ### Getting Started
 
 #### Newcomers
-- Docs
-- Videos
-- Live Demo
-- Beginner Workshop
+
+There are various ways for newcomers to begin using Chemotion and get to know the software:
+
+- Check out the [Chemotion Docs](https://chemotion.net/docs) or instructions on both the Chemotion ELN and the Chemotion Repo
+- Check out the [Chemotion Tutorial Videos](https://chemotion.net/docs/eln/videos) familiarize yourself with the user interface and the features
+- Atted an online [Live Demo & Q&A Session](https://www.nfdi4chem.de/event/chemotion-demo-qa-session/)
+- Attend a [Chemotion ELN Hands-on Workshop](https://www.nfdi4chem.de/event/chemotion-eln-hands-on-workshop/)
 
 #### Establishing Chemotion ELN in your Group
 
-- sharing is caring article, use table/matrix
-- [converter profiles](https://chemotion.net/docs/services/chemconverter/profiles)
-- [Inventory](https://chemotion.net/docs/eln/ui/inventory)? rights, connecting existing database (but no good solution)
-- LabIMotion templates
-    - link other workshops
-- Internal process for data publication (https://chemotion.net/docs/repo/workflow/group_lead_review https://chemotion.net/docs/repo/workflow)
-- Establish onboarding and offboarding policies
+- Before you start rolling out Chemotion ELN in your research group, setup a sharing policy. See [Sharing is Caring: Guidelines for Sharing in the Electronic Laboratory Notebook (ELN) Chemotion as applied by a Synthesis-oriented Working Group](https://doi.org/10.1002/cmtd.202200026) for guidance.
+- Install [ChemConverter profiles](https://chemotion.net/docs/services/chemconverter/profiles) for any file types that need conversion.
+- Establish internal processes for data publication, such as [approval workflows for groups leads](https://chemotion.net/docs/repo/workflow/group_lead_review). See also the [workflow for publishing to the Chemotion Repo](https://chemotion.net/docs/repo/workflow)
+- Clearly communicate the above policies and workflows to new group members during the onboarding process
+- Establish clear offboarding policies and workflows to ensure the necessary measures are [taken to revoke access](https://chemotion.net/docs/eln/admin/user_management#de-activating-vs-un-locking-an-account) and ensure others in the group maintain access, where needed.
+- Setup your chemical inventory [Inventory](https://chemotion.net/docs/eln/ui/inventory) for your group and ensure correct access to it. You can [import and export](https://chemotion.net/docs/eln/ui/inventory#import-and-export-chemicals) chemical lists, as well.
+- Setup [LabIMotion templates](https://chemotion.net/docs/labimotion/design-principles) to expand customize the ELN to fit your needs. Visit a [LabIMotion Oneline Hands-on Workshop](https://www.nfdi4chem.de/event/labimotion-online-hands-on-workshop/) to familiarize yourself with this feature.
 
 ### Sources and Further Information
 
