--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -135,7 +135,7 @@ There are various ways for newcomers to begin using Chemotion and get to know th
 - Clearly communicate the above policies and workflows to new group members during the onboarding process
 - Establish clear offboarding policies and workflows to ensure the necessary measures are [taken to revoke access](https://chemotion.net/docs/eln/admin/user_management#de-activating-vs-un-locking-an-account) and ensure others in the group maintain access, where needed.
 - Setup your chemical inventory [Inventory](https://chemotion.net/docs/eln/ui/inventory) for your group and ensure correct access to it. You can [import and export](https://chemotion.net/docs/eln/ui/inventory#import-and-export-chemicals) chemical lists, as well.
-- Setup [LabIMotion templates](https://chemotion.net/docs/labimotion/design-principles) to expand customize the ELN to fit your needs. Visit a [LabIMotion Oneline Hands-on Workshop](https://www.nfdi4chem.de/event/labimotion-online-hands-on-workshop/) to familiarize yourself with this feature.
+- Setup [LabIMotion templates](https://chemotion.net/docs/labimotion/design-principles) to expand customize the ELN to fit your needs. Visit a [LabIMotion Online Hands-on Workshop](https://www.nfdi4chem.de/event/labimotion-online-hands-on-workshop/) to familiarize yourself with this feature.
 
 ### Sources and Further Information
 
