review and integration of sharing/literature in Experiment Design

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -22,9 +22,9 @@ article](docs/choose_eln) and test demo instances [here](https://demo.chemotion.
 
 Chemotion is the ELN reference instance in [NFDI4Chem](https://www.nfdi4chem.de/). The software is developed by several developers at different NFDI4Chem sites. The development started at the [Karlsruhe institute of Technology (KIT)](https://www.kit.edu/) as part of a DFG-funded project. The extension of the software was and is further supported by the [State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts](https://mwk.baden-wuerttemberg.de/), the Karlsruhe Institute of Technology, and the [German Research Foundation (DFG)](https://www.dfg.de/).
 
-The Chemotion ELN has been specifically designed for chemists, taking into account the unique requirements of chemical laboratory work and documentation. It serves as a powerful digitalization tool for chemistry, aimed at creating seamless workflows throughout the research life cycle. Achieving this vision is a collaborative effort involving continuous development, enhancement, and expansion of the ELN.
+The Chemotion ELN has been specifically designed for chemists, taking into account the unique requirements of chemical laboratory work and documentation. It serves as a powerful digitalization tool for chemistry, aimed at creating seamless workflows throughout the [reseach data life cycle](docs/data_life_cycle). Achieving this vision is a collaborative effort involving continuous development, enhancement, and expansion of the ELN.
 
-To get an overview on how and with which tools Chemotion ELN supports you throughout the whole [reseach data life cycle](docs/data_life_cycle), have a look at the flowchart below expanding the detailed information as you like.
+To get an overview on how and with which tools Chemotion ELN supports you throughout the whole [reseach data life cycle](docs/data_life_cycle), have a look at the sections below and find out more detailed information about the single steps by clicking the link in the respective section.
 
 ## Data Life Cycle Support
 
@@ -112,7 +112,9 @@ A short introduction to the Chemotion ELN as well as the connection to the Chemo
 
 ## Documentation, Information, and Contact
 
-Chemotion ELN and its functionalities are described in various publications (see [below](#sources-and-further-information)). For users, developers, and admins, a documentation is available via the project's [website](https://www.chemotion.net/docs). Chemotion ELN is an Open Source development; the source code is available on [GitHub](https://github.com/ComPlat/chemotion_ELN).
+Chemotion ELN and its functionalities are described in various publications (see [below](#publications-sources-and-further-information)). For users, developers, and admins, a documentation is available via the project's [website](https://www.chemotion.net/docs). Chemotion ELN is an Open Source development; the source code is available on [GitHub](https://github.com/ComPlat/chemotion_ELN).
+
+{/* COMMENT (Fabian): Sentence below still relevant with the new "getting started" guide? */}
 
 NFDI4Chem offers hands-on workshop and Q&A sessions for Chemotion ELN and the LabIMotion extension. Visit the [workshop overview page](https://www.nfdi4chem.de/workshops/) for more information.
 
@@ -122,22 +124,22 @@ NFDI4Chem offers hands-on workshop and Q&A sessions for Chemotion ELN and the La
 
 There are various ways for newcomers to begin using Chemotion and get to know the software:
 
-- Check out the [Chemotion Docs](https://chemotion.net/docs) or instructions on both the Chemotion ELN and the Chemotion Repo
-- Check out the [Chemotion Tutorial Videos](https://chemotion.net/docs/eln/videos) familiarize yourself with the user interface and the features
-- Atted an online [Live Demo & Q&A Session](https://www.nfdi4chem.de/event/chemotion-demo-qa-session/)
+- Check out the [Chemotion Docs](https://chemotion.net/docs): instructions on both the Chemotion ELN and the Chemotion Repo
+- Check out the [Chemotion Tutorial Videos](https://chemotion.net/docs/eln/videos): familiarize yourself with the user interface and the features
+- Attend an online [Live Demo & Q&A Session](https://www.nfdi4chem.de/event/chemotion-demo-qa-session/)
 - Attend a [Chemotion ELN Hands-on Workshop](https://www.nfdi4chem.de/event/chemotion-eln-hands-on-workshop/)
 
 #### Establishing Chemotion ELN in your Group
 
 - Before you start rolling out Chemotion ELN in your research group, setup a sharing policy. See [Sharing is Caring: Guidelines for Sharing in the Electronic Laboratory Notebook (ELN) Chemotion as applied by a Synthesis-oriented Working Group](https://doi.org/10.1002/cmtd.202200026) for guidance.
 - Install [ChemConverter profiles](https://chemotion.net/docs/services/chemconverter/profiles) for any file types that need conversion.
-- Establish internal processes for data publication, such as [approval workflows for groups leads](https://chemotion.net/docs/repo/workflow/group_lead_review). See also the [workflow for publishing to the Chemotion Repo](https://chemotion.net/docs/repo/workflow)
-- Clearly communicate the above policies and workflows to new group members during the onboarding process
+- Establish internal processes for data publication, such as [approval workflows for groups leads](https://chemotion.net/docs/repo/workflow/group_lead_review). See also the [workflow for publishing to the Chemotion Repo](https://chemotion.net/docs/repo/workflow).
+- Clearly communicate the above policies and workflows to new group members during the onboarding process.
 - Establish clear offboarding policies and workflows to ensure the necessary measures are [taken to revoke access](https://chemotion.net/docs/eln/admin/user_management#de-activating-vs-un-locking-an-account) and ensure others in the group maintain access, where needed.
-- Setup your chemical inventory [Inventory](https://chemotion.net/docs/eln/ui/inventory) for your group and ensure correct access to it. You can [import and export](https://chemotion.net/docs/eln/ui/inventory#import-and-export-chemicals) chemical lists, as well.
-- Setup [LabIMotion templates](https://chemotion.net/docs/labimotion/design-principles) to expand customize the ELN to fit your needs. Visit a [LabIMotion Online Hands-on Workshop](https://www.nfdi4chem.de/event/labimotion-online-hands-on-workshop/) to familiarize yourself with this feature.
+- Setup your chemical [Inventory](https://chemotion.net/docs/eln/ui/inventory) for your group and ensure correct access to it. You can [import and export](https://chemotion.net/docs/eln/ui/inventory#import-and-export-chemicals) chemical lists, as well.
+- Setup [LabIMotion templates](https://chemotion.net/docs/labimotion/design-principles) to expand and customize the ELN to fit your needs. You may also visit a [LabIMotion Online Hands-on Workshop](https://www.nfdi4chem.de/event/labimotion-online-hands-on-workshop/) to familiarize yourself with this feature.
 
-### Sources and Further Information
+### Publications, Sources, and Further Information
 
 -   [Chemotion ELN: an Open Source electronic lab notebook for chemists in academia](https://doi.org/10.1186/s13321-017-0240-0)
 -   [Chemotion-ELN part 2: adaption of an embedded Ketcher editor to advanced research applications](https://doi.org/10.1186/s13321-018-0292-9)
