--- a/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln_experimentDesign.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln_experimentDesign.mdx
@@ -11,10 +11,15 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ![](/img/smartlab/chemotion/experiment_design.png)
 
-{/* COMMENT (Nikki): literature management; what about rights responsiblities */}
+{/* COMMENT (Nikki): literature management; what about rights responsiblities
+COMMENT (Fabian): done, review pending */}
 
 In the Chemotion ELN, various entry types can be generated for planning various experimental setups. Generally, all entry types offer the possibility to draw chemical structures directly within the ELN. This is realized by embedded structure editors: *ketcher-rails* and *Ketcher 2* are integrated as default structure editors, while *ChemDraw JS* and *Marvin JS* can be integrated when the needed licences are available.
 
 All structure editors directly convert the chemical structures into common chemical identifiers such as [*InChI*](https://www.inchi-trust.org/) and notations such as [*SMILES*](https://doi.org/10.1021%2Fci00057a005) code and automatically generate a MOL file of the chemical structure. Conversely, chemical structures can be generated in the ELN by importing the codes and files mentioned above as well as by [*CAS numbers*](https://www.cas.org/cas-data/cas-registry).
 
 The Chemotion ELN directly pulls information from and links entries to databases such as [*PubChem*](https://pubchem.ncbi.nlm.nih.gov/) and [*CAS SciFinder*](https://www.cas.org/solutions/cas-scifinder-discovery-platform/cas-scifinder). Thus, the planning of experiments is facilitated as all relevant information is automatically integrated into the ELN entries.
+
+Furthermore, the Chemotion ELN offers the possibility to link (text) publications directly to the ELN entries as references using [Persistant Identifiers](/docs/pid) such as DOI numbers. With this, corresponding literature can be connected to experiments to cite and refer to your own published work, experiments performed by others, or related publications.
+
+Oftentimes, collaboration and exchange with other scientists on a project or experiment are needed. The Chemotion ELN allows for a simple sharing of ELN entries and corresponding data. Depending on the selected permission and detail levels, collaborators can access and edit shared data in the ELN. If you want to find out more about sharing in the Chemotion ELN and exemplarily sharing guidelines, have a look at this [publication](https://doi.org/10.1002/cmtd.202200026).
