add mailing list

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -181,6 +181,7 @@ There are various ways for newcomers to begin using Chemotion and get to know th
 -   Check out the [Chemotion Tutorial Videos](https://chemotion.net/docs/eln/videos): familiarize yourself with the user interface and the features
 -   Attend an online [Live Demo & Q&A Session](https://www.nfdi4chem.de/event/chemotion-demo-qa-session/)
 -   Attend a [Chemotion ELN Hands-on Workshop](https://www.nfdi4chem.de/event/chemotion-eln-hands-on-workshop/)
+- Sign up for the [chemotion mailing list for users and admins](https://www.lists.kit.edu/sympa/subscribe/chemotion_eln) to stay up to date
 
 #### Establishing Chemotion ELN in your Group
 
