add mailing list

--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -48,6 +48,7 @@ Chemotion ELN and its functions were described in various publications (see [bel
 
 ## Sources and further information
 
+-   [Chemotion mailing list for Users and Admins](https://www.lists.kit.edu/sympa/subscribe/chemotion_eln)
 -   [Chemotion ELN: an Open Source electronic lab notebook for chemists in academia](https://doi.org/10.1186/s13321-017-0240-0)
 -   [Chemotion-ELN part 2: adaption of an embedded Ketcher editor to advanced research applications](https://doi.org/10.1186/s13321-018-0292-9)
 -   [CHEMSCANNER: extraction and re-use(ability) of chemical information from common scientific documents containing ChemDraw files](https://doi.org/10.1186/s13321-019-0400-5)
