--- a/docs/30_data/30_data_organisation.mdx
+++ b/docs/30_data/30_data_organisation.mdx
@@ -6,7 +6,7 @@ nfdi4chem-tags: [data_organisation, data_storage, repositories]
 slug: "/data_organisation"
 ---
 
-After [documentation of your research data](/docs/data_documentation), more detailed descriptions of how your information is saved is required - a quick look at files and folders, but when working with many or large data sets, the advantages of databases can become relevant. Consider whether this applies to your project and whether only files exported from the database might be useful. For an idea about storage locations and storage methods see [Data Storage and Archiving](/docs/data_storage).
+Besides [documentation of your research data](/docs/data_documentation), another aspect which requires attention is the way how data are named, organised, shared, and referenced during a research activity. Small amounts of data can be just organised in files and folders; when working with many or large data sets, it can be convenient to organise them in a database. For an idea about storage locations and storage methods see [Data Storage and Archiving](/docs/data_storage).
 
 
 ## Files: naming conventions
