--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -7,23 +7,17 @@ id: "chemotion_eln"
 import VideoPrivacy from "video-privacy";
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
+
 # Chemotion ELN
+
+
+
+![](/img/smartlab/chemotion/chemotion_dataLifecycle_banner.png)
 
 :::info
 To find out about choosing an ELN, head to the [Choose the right ELN
 article](docs/choose_eln) and test demo instances [here](https://demo.chemotion.scc.kit.edu/).
 :::
-
-![](/img/smartlab/chemotion_preview.jpg)
-
-<img
-    alt="Chemotion ELN Logo"
-    src={useBaseUrl("/img/ChemotionELN_Logo.png")}
-    width="150"
-    align="left"
-    vspace="50"
-    hspace="40"
-/>
 
 Chemotion is the ELN reference instance in [NFDI4Chem](https://www.nfdi4chem.de/). The software is developed by several developers at different NFDI4Chem sites. The development started at the [Karlsruhe institute of Technology (KIT)](https://www.kit.edu/) as part of a DFG-funded project. The extension of the software was and is further supported by the [State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts](https://mwk.baden-wuerttemberg.de/), the Karlsruhe Institute of Technology, and the [German Research Foundation (DFG)](https://www.dfg.de/).
 
@@ -33,7 +27,7 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 ## Data Life Cycle Support
 
-{/\*
+{/*
 
 ### Data Reuse
 
@@ -52,8 +46,8 @@ out more](/docs/chemotion_eln_dataReuse) */}
 ### Experiment Design
 
 <img
-    alt="sketch experiment design"
-    src={useBaseUrl("/img/smartlab/chemotion/experiment_design.png")}
+    alt="chemotion icon for experiment in data lifecacle"
+    src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_DoE.png")}
     width="150"
     align="left"
     vspace="0"
@@ -67,8 +61,8 @@ Chemotion assists in experiment design and planning research by offering embedde
 ### Experiment
 
 <img
-    alt="Placeholder"
-    src={useBaseUrl("/img/smartlab/chemotion/experiment_chemist.png")}
+    alt="chemotion icon for experiment in data lifecacle"
+    src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_experiment.png")}
     width="150"
     align="left"
     vspace="0"
@@ -79,32 +73,32 @@ During experiments, Chemotion supports researchers with _automated calculations_
 
 [Find out more](/docs/chemotion_eln_experimemt)
 
+<br />
+
 ### Data Collection and Processing
 
 <img
-    alt="Placeholder"
-    src={useBaseUrl("/img/smartlab/chemotion/data_collection_nmr.png")}
-    width="200"
+    alt="chemotion icon for experiment in data lifecacle"
+    src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_dataCollection_Processing.png")}
+    width="150"
     align="left"
-    vspace="30"
-    hspace="50"
+    vspace="0"
+    hspace="40"
 />
 
-For seamless workflows, _analytical devices_ can be connected and directly accessed within the Chemotion ELN.
-
-Besides the connection of analytical devices to the Chemotion ELN, data from these devices can be automatically transferred, file formats are converted, and metadata is mapped.
+For seamless workflows, _analytical devices_ can be connected and directly accessed within the Chemotion ELN. Besides this connection, data from these devices can be automatically transferred, file formats are converted, and metadata is mapped.
 
 [Find out more](/docs/chemotion_eln_dataCollection)
 
 ### Analysis
 
 <img
-    alt="Placeholder"
-    src={useBaseUrl("/img/smartlab/chemotion/analysis_sketch.png")}
-    width="200"
+    alt="chemotion icon for experiment in data lifecacle"
+    src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_analysis.png")}
+    width="150"
     align="left"
     vspace="0"
-    hspace="50"
+    hspace="40"
 />
 
 Analyses can be performed directly in the Chemotion ELN by utilizing one of the embedded _spectra editors_.
@@ -112,31 +106,27 @@ Analyses can be performed directly in the Chemotion ELN by utilizing one of the 
 [Find out more](/docs/chemotion_eln_analysis)
 
 <br />
+
 ### Data Publication
 
 <img
-    alt="Placeholder"
-    src={useBaseUrl("/img/smartlab/chemotion/publication.png")}
-    width="200"
+    alt="chemotion icon for experiment in data lifecacle"
+    src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_dataPublication.png")}
+    width="150"
     align="left"
     vspace="0"
-    hspace="50"
+    hspace="40"
 />
+
 
 The Chemotion ELN is connected to several _data repositories_. Incorperated publishing workflows allow for simple and fast publication of research data.
 
 [Find out more](/docs/chemotion_eln_dataPublication)
 
+<br />
+
 ## LabIMotion
 
-<img
-    alt="LabIMotion logo"
-    src={useBaseUrl("/img/LabIMotion_logo.png")}
-    width="200"
-    align="left"
-    vspace="30"
-    hspace="50"
-/>
 
 In addition to its primary focus on chemistry, the ELN is also utilized in various other disciplines due to its versatile functionality that caters to the needs of scientists operating in interdisciplinary environments. These generic elements are continually being refined and adapted. The latest extension, introduced in November 2023, is [LabIMotion](https://www.chemotion.net/docs/labimotion), which enables users to incorporate entirely non-chemical functionalities by designing new modules.
 
