fix: review and edit

--- a/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln_experimentDesign.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln_experimentDesign.mdx
@@ -8,10 +8,6 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Chemotion ELN: Experiment Design
 
-
-{/* COMMENT (Nikki): literature management; what about rights responsiblities
-COMMENT (Fabian): done, review pending */}
-
 ![](/img/smartlab/chemotion/chemotion_DoE_banner.png)
 
 In the Chemotion ELN, various entry types can be generated for planning various experimental setups. Generally, all entry types offer the possibility to draw chemical structures directly within the ELN. This is realized by embedded structure editors: *ketcher-rails* and *Ketcher 2* are integrated as default structure editors, while *ChemDraw JS* and *Marvin JS* can be integrated when the needed licences are available.
@@ -20,6 +16,6 @@ All structure editors directly convert the chemical structures into common chemi
 
 The Chemotion ELN directly pulls information from and links entries to databases such as [*PubChem*](https://pubchem.ncbi.nlm.nih.gov/) and [*CAS SciFinder*](https://www.cas.org/solutions/cas-scifinder-discovery-platform/cas-scifinder). Thus, the planning of experiments is facilitated as all relevant information is automatically integrated into the ELN entries.
 
-Furthermore, the Chemotion ELN offers the possibility to link (text) publications directly to the ELN entries as references using [Persistant Identifiers](/docs/pid) such as DOI numbers. With this, corresponding literature can be connected to experiments to cite and refer to your own published work, experiments performed by others, or related publications.
+Furthermore, the Chemotion ELN offers the possibility to link (text) publications directly to the ELN entries as references using [persistant identifiers](/docs/pid) such as DOIs. With this, the ELN allows you to directcly connect corresponding literature to experiments so you can cite and reference your own published work, experiments performed by others, or related publications.
 
-Oftentimes, collaboration and exchange with other scientists on a project or experiment are needed. The Chemotion ELN allows for a simple sharing of ELN entries and corresponding data. Depending on the selected permission and detail levels, collaborators can access and edit shared data in the ELN. If you want to find out more about sharing in the Chemotion ELN and exemplarily sharing guidelines, have a look at this [publication](https://doi.org/10.1002/cmtd.202200026).
+Oftentimes, projects or experiments require collaboration and exchange with other scientists. The Chemotion ELN allows for a simple sharing of ELN entries and corresponding data. Depending on the selected permission and detail levels, collaborators can access and edit shared data in the ELN. If you want to find out more about sharing in the Chemotion ELN and exemplarily sharing guidelines, have a look at this [publication](https://doi.org/10.1002/cmtd.202200026).
