--- a/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln_experimentDesign.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln_experimentDesign.mdx
@@ -8,7 +8,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Chemotion ELN: Experiment Design
 
-![](/img/smartlab/chemotion/chemotion_DoE_banner.png)
+![icon and screenshots for experiment design in Chemotion ELN](/img/smartlab/chemotion/chemotion_DoE_banner.png)
 
 In the Chemotion ELN, various entry types can be generated for planning various experimental setups. Generally, all entry types offer the possibility to draw chemical structures directly within the ELN. This is realized by embedded structure editors: *ketcher-rails* and *Ketcher 2* are integrated as default structure editors, while *ChemDraw JS* and *Marvin JS* can be integrated when the needed licences are available.
 
