--- a/docs/40_smartlab/41_chemotion_eln/30_chemotion_experiment.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/30_chemotion_experiment.mdx
@@ -8,7 +8,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Chemotion: Experiment
 
-![](/img/smartlab/chemotion/experiment_chemist.png)
+![icon and screenshots for experiments in Chemotion ELN](/img/smartlab/chemotion/chemotion_experiment_banner.png)
 
 As relevant information on chemical compounds such as molar mass, density, and purity are stored within the ELN, Chemotion automatically calculates all relevant amounts saving a researcher's time and preventing miscalculations and typos. Furthermore, predefined text snippets and the transfer of reaction information to the description of experiments allow for a fast and facile documentation.
 
