add: publish banner

--- a/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
@@ -7,8 +7,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Chemotion: Data Publication
 
-![](/img/smartlab/chemotion/publication.png)
-
+![icon and screenshots for data publishing in Chemotion ELN](/img/smartlab/chemotion/chemotion_publish_banner.png)
 
 <br/>
 <br/>  
