--- a/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/70_chemotion_eln_dataPublication.mdx
@@ -9,17 +9,39 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ![icon and screenshots for data publishing in Chemotion ELN](/img/smartlab/chemotion/chemotion_publish_banner.png)
 
+
+<img
+    alt="chemotion icon for experiment in data lifecacle"
+    src={useBaseUrl("/img/ChemotionRepo_Logo.svg")}
+    width="170"
+    align="left"
+    vspace="20"
+    hspace="20"
+/>
+
+
+Chemotion ELN provides a dedicated functionality that facilitates the [publication of research data](/docs/data_publishing) by enabling seamless transfer from a user's ELN account to a [research data repository](/docs/repositories). Currently, the ELN supports data transfers to the [*Chemotion Repository*](https://www.chemotion-repository.net/welcome) and [*RADAR4Chem*](https://radar4chem.radar-service.eu/radar/en/home). This feature allows researchers to easily transfer their research data, including semantic metadata, into a repository, thereby reducing their workload and helping meet the requirements set by funding agencies, while making their work available to their research community.<img
+    alt="chemotion icon for experiment in data lifecacle"
+    src={useBaseUrl("/img/radar4chem_Logo.svg")}
+    width="150"
+    align="left"
+    vspace="0"
+    hspace="20"
+/>
+
 <br/>
-<br/>  
-<img alt="RADAR4chem Logo" src={useBaseUrl('/img/radar4chem_Logo.svg')} width="180" align= "left" vspace="30" hspace="50"/>
-<img alt="Chemotion Repository Logo" src={useBaseUrl('/img/ChemotionRepo_Logo.svg')} width="200" vspace="10" hspace="50"/>
+<br/>
 
-Chemotion ELN provides a dedicated functionality that facilitates the [publication of research data](/docs/data_publishing) by enabling seamless transfer from a user's ELN account to a [research data repository](/docs/repositories). Currently, the ELN supports data transfers to the [*Chemotion Repository*](https://www.chemotion-repository.net/welcome) and [*RADAR4Chem*](https://radar4chem.radar-service.eu/radar/en/home). This feature allows researchers to easily transfer their research data, including semantic metadata, into a repository, thereby reducing their workload and helping meet the requirements set by funding agencies, while making their work available to their research community.
 
-  
-<img alt="nmrXiv Logo" src={useBaseUrl('/img/nmrXiv.svg')} width="200" align= "left" vspace="30" hspace="50"/>Furthermore, Chemotion ELN is connected to other repositories such as [*nmrXiv*](https://nmrxiv.org/) to ensure optimal visibility and facilitate user-friendly searches for original research data. The NFDI4Chem team is actively working on establishing connections to additional repositories, particularly those [supported and recommended by NFDI4Chem](/docs/choose_repository/). This ongoing effort aims to enhance accessibility and interoperability within the research community.
-
-{/* COMMENT (Nikki): work on logo placement */}
+<img
+    alt="chemotion icon for experiment in data lifecacle"
+    src={useBaseUrl("/img/nmrXiv.svg")}
+    width="150"
+    align="right"
+    vspace="40"
+    hspace="40"
+/>
+Furthermore, Chemotion ELN is connected to other repositories such as [*nmrXiv*](https://nmrxiv.org/) to ensure optimal visibility and facilitate user-friendly searches for original research data. The NFDI4Chem team is actively working on establishing connections to additional repositories, particularly those [supported and recommended by NFDI4Chem](/docs/choose_repository/). This ongoing effort aims to enhance accessibility and interoperability within the research community.
 
 
 
