--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -10,8 +10,6 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Chemotion ELN
 
-
-
 ![](/img/smartlab/chemotion/chemotion_dataLifecycle_banner.png)
 
 :::info
@@ -27,15 +25,15 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 ## Data Life Cycle Support
 
-{/*
+{/* Placeholder
 
 ### Data Reuse
 
 {" "}
 
 <img
-    alt="PLACEHOLDER"
-    src={useBaseUrl("")}
+    alt="chemotion icon for data reuse"
+    src={useBaseUrl("/img/smartlab/chemotion/chemotion_icons/chemotion_reuse.png")}
     width="150"
     align="left"
     vspace="0"
