--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -7,7 +7,7 @@ import KbTagCloud from "@site/src/components/KbTagCloud.js";
 
 # Data Management Plan (DMP)
 
-## Introduction into DMP
+## Introduction 
 
 Data management plans (DMP) help to outline how research data will be handled during and after a project to ensure preservation of the data and their [metadata](/docs/metadata). DMPs are particularly helpful when created prior to data collection to guarantee consistent [organisation](/docs/data_organisation), annotation, and formatting of the data. They can be used as part of quality and project management.
 
