--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -11,14 +11,14 @@ import KbTagCloud from "@site/src/components/KbTagCloud.js";
 
 A data management plan is a document that outlines how data will be handled during and after a research project to secure the preservation of the data and their metadata. Ideally, a DMP is created before the data collection begins. This ensures that file structures, formats, metadata standards, and access controls are planned consistently and transparently from the outset. DMPs can be used as part of quality and project management, and should be updated whenever changes in handling research data are made.
 
-A DMP answers the W-questions for documentation.
+A DMP answers the W-questions for documentation:
 
 > "In a DMP a researcher or research team describes **What** data goes into a project (reuse) and comes out of it (potential reuse), **How** the team takes care of the data, and **Who** is allowed to do **What** with the data **When**."<sup>[1](https://www.openaire.eu/blogs/why-is-this-a-good-data-management-plan)</sup>
 
 In addition, the data management plan also addresses cross-cutting issues such as standards, ethics, responsibilities, and so on.
 
 :::info Goal: 
-A structured, sustainable, and accessible approach to handling research data in line with the FAIR principles.:::
+A structured, sustainable, and accessible approach to handling research data in line with the FAIR principles. :::
 
 ## Why is a DMP important?
 
